<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_ask_finish"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_5sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:maxLines="2"
        android:text="@string/buyurtmani_rostdan_ham_yakunlamoqchimisiz"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text_black_white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/buyurtmani_yakunlaganingizdan_so_ng_u_yakunlangan_buyurtmalar_safiga_qo_shiladi_va_u_haqidagi_ma_lumotlarni_tarix_bo_limidan_topishingiz_mumkin_bo_ladi"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_finish_order"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/yakunlash"
            android:textColor="@color/text_black_white"
            app:cornerRadius="@dimen/_8sdp"
            app:elevation="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel_order"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textAllCaps="false"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/bekor_qilish"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/_8sdp" />

    </LinearLayout>

</LinearLayout>