<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:background="#FEFEFE"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.permission.PermissionCheckActivity">

    <LinearLayout
        android:id="@+id/ask_allow"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permissionMessage"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bg_permission_message" />


        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/we_will_not_store_any_of_your_data_and_adhering_to_our_privacy_agreement" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowBtn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/all_allow" />

    <Button
        android:id="@+id/cancelBtn"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_allow"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_100sdp"
            app:lottie_rawRes="@raw/not_allow_location"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"
            android:layout_height="@dimen/_100sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/is_need_permission"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppButton"
            android:id="@+id/againPermissionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="Ruxsat berish" />
    </LinearLayout>


</RelativeLayout>