<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dashboard"
    tools:context=".ui.home.transfer.transfermoney.TransferMoneyFragment">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top"
        android:elevation="@dimen/_3sdp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <FrameLayout
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_gravity="center"
                android:background="@drawable/back_shape"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <ImageView
                    android:id="@+id/fbn_back_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/icon"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="#fff" />

            </FrameLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/money_transfer"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_black_white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/transfer_balance_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="100 000 UZS"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"

                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_driver_id" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_edittext"
                android:hint="@string/input"
                android:inputType="number"
                android:maxLength="4"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp" />

            <ProgressBar
                android:id="@+id/pb_login"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/transfer_person_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/title_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:enabled="false"
                android:text="@string/transfer_money_value" />

            <EditText
                android:id="@+id/ed_money_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:alpha=".5"
                android:background="@drawable/bg_input_edittext"
                android:enabled="false"
                android:hint="@string/input"
                android:inputType="number"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp" />


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendMoney_button"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_states_materialbutton"
            android:enabled="false"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/color__states_text_button"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_7sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>