<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="@dimen/positive_10dp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/card_error"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_payment_error" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_7sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_error" />

        <TextView
            android:id="@+id/txt_error_desc_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="Hisobingizda yetarli mablag’ mavjud emas, iltimos hisobingizni to’ldiring!"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_error" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/hisobni_to_ldirish"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingVertical="@dimen/_10sdp"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_error_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
           android:layout_marginTop="@dimen/_7sdp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingVertical="@dimen/_10sdp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_money" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>